--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tippyjs/react": "^4.2.6",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -25,6 +27,7 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
     "tailwindcss": "3.3.2",
+    "tippy.js": "^6.3.7",
     "typescript": "5.1.3"
   }
 }
