--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.5",
     "@types/react-redux": "^7.1.25",
     "autoprefixer": "10.4.14",
+    "axios": "^1.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "next": "13.4.6",
@@ -27,6 +28,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "tailwindcss": "3.3.2",
     "tippy.js": "^6.3.7",
     "typescript": "5.1.3"
