--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-redux": "^7.1.25",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
+    "cookie": "^0.5.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "jwt-decode": "^3.1.2",
@@ -34,5 +35,8 @@
     "tailwindcss": "3.3.2",
     "tippy.js": "^6.3.7",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.2"
   }
 }
